# daichod

./: .dockerignore  AGENTS.md  BUILDING.md  CMakeLists.txt  CONTRACT.md  Containerfile  DESIGN.md  README.md  VERSION
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
proto/: buf.yaml  shim.proto
proto/google/rpc/: status.proto
src/: main.cpp  version.h.in
src/engine/: map.cpp  map.h  session.cpp  session.h  worker.cpp  worker.h
src/journal/: internal.proto  journal.cpp  journal.h  recovery.cpp  recovery.h
src/rpc/: account_service.cpp  account_service.h  commodity_service.cpp  commodity_service.h  error.cpp  error.h  mutation.cpp  mutation.h  rpc_util.h  session_service.cpp  session_service.h  transaction_service.cpp  transaction_service.h
src/util/: backup.cpp  backup.h  crash_point.h  fail_point.h
test/: CMakeLists.txt
test/golden/: golden_test.cpp
test/integration/: account_test.cpp  crash_test.cpp  daemon_fixture.h  lifecycle_test.cpp  session_test.cpp  transaction_test.cpp
test/property/: property_test.cpp
test/unit/: error_test.cpp  journal_test.cpp  map_test.cpp  mutation_test.cpp  worker_test.cpp
tools/mkbook/: mkbook.cpp
